# fern

./: .gitignore  docker-compose.yml  pyproject.toml
api/: Dockerfile  api.py  files.py  load_document.py  models.py  requirements.txt  schema.py  tika.py
api/app/: api.py  files.py  load_document.py  load_html.py  loaders.py  models.py  tika.py
chrome_plugin/fern-demo/: background.js  manifest.json  popup.html  popup.js
config/: tika-config.xml
fern_chrome_plugin/: background.js  button.css  manifest.json  popup.html  popup.js
services/mongo/: rs-init.sh
services/mongo_connector/: Dockerfile
services/monstache/: monstache.toml
services/nginx/: Dockerfile  default.conf  nginx.conf
services/tika/: tika-config.xml
tests/: test_files.py  test_tika_server.py
